kubernetes/platform/signoz/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: signoz
  annotations:
    external-dns.alpha.kubernetes.io/hostname: signoz.jterrazz.com
    external-dns.alpha.kubernetes.io/target: "jterrazz-vps.tail77a797.ts.net"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`signoz.jterrazz.com`)
      kind: Rule
      middlewares:
        - name: private-access
          namespace: platform-networking
      services:
        - name: signoz
          port: 8080
  tls:
    secretName: signoz-tls
